--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jobbit-launch",
-  "homepage": "https://yaserkh-kabi.github.io/jobbit-launch",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
